--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -59,7 +59,7 @@ body{
 }
 
 
-@media (max-width: 768px) and (max-height: 1024px)
+@media (width: 768px) and (height: 1024px)
 {
     .imgPoke {
         margin-right: -2% !important;
@@ -87,11 +87,11 @@ body{
         font-size: 10px;
     }
     .footer > div > span {
-        font-size: 10px;
+        font-size: 13px;
     }
 }
 
-@media (max-width: 1024px) and (max-height: 1366px)
+@media (width: 1024px) and (height: 1366px)
 {
     .imgPoke {
         margin-right: -2% !important;
